--- a/src/main/resources/sqlsync-config.properties
+++ b/src/main/resources/sqlsync-config.properties
@@ -1,13 +1,13 @@
 
 db.source.classname=net.sourceforge.jtds.jdbc.Driver
-db.source.url=jdbc:jtds:sqlserver://s79w0364.sgp.hp.com:1433/fa_sfds
-db.source.username=rdstest
-db.source.password=rdstest15
+db.source.url=jdbc:jtds:sqlserver://xxx:1433/xx
+db.source.username=xx
+db.source.password=xx
 
 db.target.classname=net.sourceforge.jtds.jdbc.Driver
-db.target.url=jdbc:vertica://g9t3223.houston.hp.com:5433/shr9_vrt_dev_003?ConnectionLoadBalance=1&search_path=mfg_pms
-db.target.username=srvc_mfg_pms_loader_dev
-db.target.password=8ObtOgTL50GC
+db.target.url=jdbc:vertica://xx:5433/xx?ConnectionLoadBalance=1&search_path=xx
+db.target.username=xx
+db.target.password=xx
 
 
 job.batch.size=10000
